# TickerIQ

./: .gitignore  hello.py  justfile  main.py  pyproject.toml  settings.toml  test.ipynb  test.py
src/TicketIQ/: config.py  exception.py  logger.py
src/TicketIQ/config/: __init__.py  data.py  docker.py  exception.py  log_config.py  main.py  model.py  paths.py  secrets.py
src/TicketIQ/data/: cleaner.py  keywords.py  labeler.py  loader.py  schema.py  test.py
