[project]
name = "ticketiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["pydantic-settings[toml]>=2.14.1", "rich>=15.0.0"]

[dependency-groups]
dev = ["basedpyright>=1.39.3", "ruff>=0.15.12"]


[build-system] #How your project is built
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel] #What to include in package
packages = ["src/TicketIQ"]

[tool.ruff]
line-length = 88
target-version = "py311"
